<resources>
    <string name="app_name">字幕视频制作</string>
    <string name="dialog_title">用户协议和隐私政策提示</string>
    <string name="dialog_content">亲爱的用户：\n\t\t\t\t您好，在您使用本应用之前，请您认证阅读并了解《用户协议》和《隐私政策》。点击“同意”即表示已阅读并同意全部条款。</string>
    <string name="dialog_agree_btn_text">同意</string>
    <string name="dialog_disagree_tv_text">不同意并退出>> </string>
    <string name="dialog_exit_title">提示</string>
    <string name="dialog_exit_nessage">确认退出当前app</string>
    <string name="dialog_exit_positive">取消</string>
    <string name="dialog_exit_negative">确认退出</string>
    <string name="str"><![CDATA[&]]></string>
    <string name="user">《用户协议》</string>
    <string name="privacy">《隐私政策》</string>
    <string name="iphone">请输入手机号码</string>
    <string name="code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="login_register">登录/注册</string>
    <string name="product">新建项目</string>
    <string name="improt_product">点击任意位置即可导入视频</string>
    <string name="select_iphone">为了方便您的查询，请输入您的手机号</string>
    <string name="import_phone">请输入手机号～</string>
    <string name="mingjiang_rhinox_cn">联系邮箱：mingjiang@rhinox.cn</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="mu">字幕视频制作</string>
    <string name="submit">提交</string>
    <string name="interface_problem">界面问题</string>
    <string name="function_problem">功能问题</string>
    <string name="message_problem">内容问题</string>
    <string name="rests_problem">其他问题</string>
    <string name="product_problem">产品建议</string>
    <string name="qq">1404556846</string>
    <string name="qq_call">联系QQ</string>
    <string name="access_logout">账号注销</string>
    <string name="select">请选择以下其中一项：</string>
    <string name="about_us">关于我们</string>
    <string name="help">帮助与反馈</string>
    <string name="memory_close">清理缓存</string>
    <string name="login">点击登录</string>
    <string name="login_morn">登录开通更多权限</string>
    <string name="login_vip">登陆开通权限</string>
    <string name="agreement_or_policy">《用户协议》&amp;《隐私政策》 </string>
    <string name="activity_title_project">项目</string>
    <string name="activity_title_help_feedback">帮助与反馈</string>
    <string name="user_name">安妮</string>
    <string name="logout">账号注销</string>
    <string name="product_text">项目</string>
    <string name="about">关于我们</string>
    <string name="close">关闭</string>
    <string name="string_editor_detail_default_font">仅限400字内</string>
    <string name="vip">开通会员</string>
    <string name="along_vip">vip独有特权</string>
    <string name="vip_text">多种字体随心编辑\n\t\t无限制导出次数\n\t\t超清无水印导出</string>
    <string name="vip_right">立即支付</string>
    <string name="app_app">\t\t账号一旦注销成功，我们将清除当前\nAPP的所有数据，您将再也无法使用此\n账号注册/登录当前APP。\n\n\t\t同时也无法享受以及使用当前APP提\n供的任何服务</string>
    <string name="user_message">亲爱的用户：</string>
    <string name="hint">温馨提示</string>
    <string name="pay_right">立即支付</string>
    <string name="pay_choose">选择支付方式</string>
    <string name="_18_00">支付金额：18:00</string>
    <string name="zhi_fu_bao">支付宝支付</string>
    <string name="wechat">微信</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="vip_m">一个月vip</string>
    <string name="_18_00_S">¥18.00</string>
    <string name="_38_00">¥38.00</string>
    <string name="vip_year">季度vip</string>
    <string name="vip_new">年度vip</string>
    <string name="_68_00">¥68.00</string>
    <string name="_54_00">¥54.00</string>
</resources>
