<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".ui.activity.mine.About_US_Activity">

    <ImageView
        android:layout_width="@dimen/dp_187"
        android:layout_height="@dimen/dp_220"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_83"
        android:src="@drawable/help_log" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_39">

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="#ff3099fb"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str"
            android:textColor="#ff3099fb"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="#ff3099fb"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_292"
        android:text="@string/v_1_0_0"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_60"
        android:text="@string/mingjiang_rhinox_cn"
        android:textColor="#ff999999"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_266"
        android:text="@string/mu"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_18" />

    <include
        android:id="@+id/about_us_bar"
        layout="@layout/about_us_bar" />
</RelativeLayout>