<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_204"
    android:background="@drawable/dialog_ra"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/zhi_fu_bao_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_57"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:src="@drawable/zfb_log"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_marginBottom="@dimen/dp_7"
            android:text="@string/zhi_fu_bao"
            android:textColor="@color/darks"
            android:textSize="@dimen/sp_16" />

        <CheckBox
            android:id="@+id/choose_zhi_fu_bao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/pay_select"
            android:layout_marginLeft="@dimen/dp_173" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/dp_95"
        android:background="@color/colorDark"
        android:layout_height="@dimen/dp_1"/>

    <LinearLayout
        android:id="@+id/wechat_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_101"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:src="@drawable/wechat_log"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_marginBottom="@dimen/dp_7"
            android:text="@string/wechat"
            android:textColor="@color/darks"
            android:textSize="@dimen/sp_16" />

        <CheckBox
            android:id="@+id/choose_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:background="@drawable/pay_select"
            android:layout_marginLeft="@dimen/dp_221" />
    </LinearLayout>

    <TextView
        android:id="@+id/pya_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/_18_00"
        android:textColor="@color/darks"
        android:textSize="@dimen/sp_16" />

    <ImageView
        android:id="@+id/close_pay"
        android:layout_width="wrap_content"
        android:background="@drawable/close_window"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/pay_choose"
        android:textColor="@color/darks"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/pya_button"
        android:layout_width="@dimen/dp_328"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/dialog_btn_agree_bg"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/pay_right"
        android:textColor="@color/close_color"
        android:textSize="@dimen/sp_16" />
</RelativeLayout>