<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_276"
    android:layout_height="@dimen/dp_290"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_dialog"
    android:minWidth="@dimen/dp_276"
    android:minHeight="@dimen/dp_290"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_dig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_13"
        android:src="@drawable/error_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_28"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negtive"
            android:layout_width="@dimen/dp_113"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/logout_bg"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/close_color"
            android:textSize="@dimen/sp_16"
            tools:text="No" />


        <Button
            android:id="@+id/positive"
            android:layout_width="@dimen/dp_113"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/dialog_btn_agree_bg"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/close_color"
            android:textSize="@dimen/sp_16"
            tools:text="Yes" />
    </LinearLayout>

    <com.keyi.zimushipinzhizuo.ui.widget.textview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typeface="source_han_sans_cn_regular"
        android:layout_centerHorizontal="true"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginTop="@dimen/dp_92"
        android:text="@string/app_app"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_14" />

    <com.keyi.zimushipinzhizuo.ui.widget.textview.CustomTextView
        app:typeface="source_han_sans_cn_bold"
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_28"
        android:textColor="#333333"
        android:textSize="@dimen/sp_18"
        tools:text="@string/hint" />

    <com.keyi.zimushipinzhizuo.ui.widget.textview.CustomTextView
        app:typeface="source_han_sans_cn_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_66"
        android:text="@string/user_message"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>